Capitlized background image name

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ color: #2b2b2b;
 
  header {
     height: 800px;
-    background: url('../img/full-background.png');
+    background: url('../img/Full-Background.png');
     background-size: cover;
     background-position: center;
  }
